fixed z-index of items

--- a/src/App.css
+++ b/src/App.css
@@ -29,12 +29,12 @@
   height: 20%;
   font-size:12px;
   position: absolute;
-  z-index: 999;
+  z-index: 500;
   box-shadow: 0 0 5px 0 rgba(184, 140, 140, 0.3);
 }
 
 .census-info-hover{
-  z-index: 999;
+  z-index: 500;
   top: -10px;
   right: 650px;
   height: 20%;
