--- a/src/components/style/Legend.css
+++ b/src/components/style/Legend.css
@@ -1,6 +1,6 @@
 .legend {
     position: absolute;
-    z-index: 999;
+    z-index: 500;
     right: 340px;
     top: 120px;
     padding:20px 10px;
